--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,64 +1,17 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Montserrat, sans-serif;
+  color: #3d3d3d;
+  /* font-family: OSCB; */
+  font-size: 13pt;
+  margin: 0;
+  padding: 0;
 }
 
-a {
-    color: #7c9ab7;
-    font-weight: bold;
-    text-decoration: none;
+.container {
+  max-width: 1400px;
 }
 
-p {
-    margin: 10px 0;
-}
+/* Оформление шапки */
 
-form {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-}
-
-input {
-    margin: 10px 0;
-    padding: 10px;
-    border: unset;
-    border-bottom: 2px solid #e3e3e3;
-    outline: none;
-}
-
-button {
-    padding: 10px;
-    background: #e3e3e3;
-    border: unset;
-    cursor: pointer;
-}
-
-.error {
-    border-bottom: 2px solid #ff4332;
-}
-
-.msg {
-    border: 2px solid #ffa908;
-    border-radius: 3px;
-    padding: 10px;
-    text-align: center;
-    font-weight: bold;
-}
-
-.none {
-    display: none;
-}
-
-.logout {
-    color: #b7625c;
+#logout {
+  text-align: right;
 }
