сделал вывод устройств

--- a/less/main.less
+++ b/less/main.less
@@ -5,29 +5,38 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .container {
   max-width: 1400px;
 }
+
 /* Оформление шапки */
+
 .logout {
   text-align: right;
+
+  a {
+    color: #000;
+  }
 }
-.logout a {
-  color: #000;
-}
+
 h1 {
   text-align: center;
 }
+
 /* Оформление Таблицы */
+
 table {
   border-collapse: collapse;
   text-align: center;
   width: 100%;
 }
+
 table {
+  td,
+  th {
+    border: 1px solid #000;
+  }
+
   margin-top: 1rem;
-}
-table td,
-table th {
-  border: 1px solid #000;
 }
