--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,14 +51,32 @@ table th {
   z-index: 9;
   background-color: rgba(0, 0, 0, 0.5);
 }
+.popup-subbtn {
+  text-align: center;
+  margin-top: 1rem;
+}
+.popup-msg {
+  text-align: center;
+  margin-top: 1rem;
+  height: 10px;
+}
 .popup-content {
   position: fixed;
+  text-align: left;
   left: 50%;
   top: 10%;
   background-color: #ffffff;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
   padding: 4rem 6rem;
+}
+.popup-content label {
+  width: 38%;
+  left: 50%;
+  text-align: left;
+}
+.popup-content input {
+  width: 60%;
 }
 .popup-form {
   margin-top: 3rem;
@@ -74,9 +92,21 @@ table th {
   font-size: 3rem;
   color: #ffffff;
 }
-.popup-content {
-  text-align: center;
-}
 .popup-header {
   font-family: "ProximaNova_bolt", sans-serif;
+  text-align: center;
+}
+.addform {
+  width: 500px;
+}
+.error {
+  border-bottom: 2px solid #ff4332;
+}
+.none {
+  display: none;
+}
+input {
+  border: unset;
+  border-bottom: 2px solid #e3e3e3;
+  outline: none;
 }
