Добавил картинки в паспорт и гиф загрузки

--- a/less/main.less
+++ b/less/main.less
@@ -70,6 +70,13 @@ table {
     text-align: center;
     margin-top: 1rem;
     height: 10px;
+    .gifload {
+      margin: auto;
+      width: 50px;
+      height: 50px;
+      background: url(/assets/img/load.gif) center center no-repeat;
+      background-size: cover;
+    }
   }
 }
 .popup-content {
@@ -127,12 +134,3 @@ input {
   border-bottom: 2px solid #e3e3e3;
   outline: none;
 }
-
-// label {
-//   width: 300px;
-//   left: 50%;
-//   text-align: center;
-// }
-// .addform label {
-//   text-align: left;
-// }
