--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,6 +60,13 @@ table th {
   margin-top: 1rem;
   height: 10px;
 }
+.popup-msg .gifload {
+  margin: auto;
+  width: 50px;
+  height: 50px;
+  background: url(/assets/img/load.gif) center center no-repeat;
+  background-size: cover;
+}
 .popup-content {
   position: fixed;
   text-align: left;
