--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,7 +40,8 @@ table td,
 table th {
   border: 1px solid #000;
 }
-.popup {
+.popup-add,
+.popup-select {
   display: none;
   position: fixed;
   left: 0;
@@ -51,16 +52,19 @@ table th {
   z-index: 9;
   background-color: rgba(0, 0, 0, 0.5);
 }
-.popup-subbtn {
+.popup-add-subbtn,
+.popup-select-subbtn {
   text-align: center;
   margin-top: 1rem;
 }
-.popup-msg {
+.popup-add-msg,
+.popup-select-msg {
   text-align: center;
   margin-top: 1rem;
   height: 10px;
 }
-.popup-msg .gifload {
+.popup-add-msg .gifload,
+.popup-select-msg .gifload {
   margin: auto;
   width: 50px;
   height: 50px;
