сделал цвет кнопки фильтра

--- a/less/main.less
+++ b/less/main.less
@@ -135,3 +135,8 @@ input {
   border-bottom: 2px solid #e3e3e3;
   outline: none;
 }
+
+// цвет выбранной кнопки
+.select-color {
+  background-color: #e3a103;
+}
