--- a/less/main.less
+++ b/less/main.less
@@ -95,9 +95,6 @@ table {
     left: 50%;
     text-align: left;
   }
-  input {
-    width: 60%;
-  }
 }
 .popup-form {
   margin-top: 3rem;
@@ -131,9 +128,15 @@ table {
 }
 
 input {
+  width: 60%;
   border: unset;
   border-bottom: 2px solid #e3e3e3;
   outline: none;
+}
+
+.input-min {
+  width: 27%;
+  font-size: 12pt;
 }
 
 // цвет выбранной кнопки
