Сделал поле изменить

--- a/less/main.less
+++ b/less/main.less
@@ -53,7 +53,8 @@ table {
 
 // Модальное окно
 .popup-add,
-.popup-select {
+.popup-select,
+.popup-change {
   display: none;
   position: fixed;
   left: 0;
