--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,8 @@ table th {
   border: 1px solid #000;
 }
 .popup-add,
-.popup-select {
+.popup-select,
+.popup-change {
   display: none;
   position: fixed;
   left: 0;
@@ -53,18 +54,21 @@ table th {
   background-color: rgba(0, 0, 0, 0.5);
 }
 .popup-add-subbtn,
-.popup-select-subbtn {
+.popup-select-subbtn,
+.popup-change-subbtn {
   text-align: center;
   margin-top: 1rem;
 }
 .popup-add-msg,
-.popup-select-msg {
+.popup-select-msg,
+.popup-change-msg {
   text-align: center;
   margin-top: 1rem;
   height: 10px;
 }
 .popup-add-msg .gifload,
-.popup-select-msg .gifload {
+.popup-select-msg .gifload,
+.popup-change-msg .gifload {
   margin: auto;
   width: 50px;
   height: 50px;
