--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -114,7 +114,8 @@ table th {
 .error {
   border-bottom: 2px solid #ff4332;
 }
-.none {
+.none,
+.col_id {
   display: none;
 }
 input {
@@ -129,4 +130,8 @@ input {
 }
 .select-color {
   background-color: #e3a103;
+}
+.del {
+  display: inline-block;
+  width: 25%;
 }
