--- a/less/main.less
+++ b/less/main.less
@@ -124,7 +124,8 @@ table {
 .error {
   border-bottom: 2px solid #ff4332;
 }
-.none {
+.none,
+.col_id {
   display: none;
 }
 
@@ -143,4 +144,8 @@ input {
 // цвет выбранной кнопки
 .select-color {
   background-color: #e3a103;
+}
+.del {
+  display: inline-block;
+  width: 25%;
 }
