списание для пользователя

--- a/less/main.less
+++ b/less/main.less
@@ -54,7 +54,8 @@ table {
 // Модальное окно
 .popup-add,
 .popup-select,
-.popup-change {
+.popup-change,
+.popup-spisat {
   display: none;
   position: fixed;
   left: 0;
