--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,7 +42,8 @@ table th {
 }
 .popup-add,
 .popup-select,
-.popup-change {
+.popup-change,
+.popup-spisat {
   display: none;
   position: fixed;
   left: 0;
@@ -55,20 +56,23 @@ table th {
 }
 .popup-add-subbtn,
 .popup-select-subbtn,
-.popup-change-subbtn {
+.popup-change-subbtn,
+.popup-spisat-subbtn {
   text-align: center;
   margin-top: 1rem;
 }
 .popup-add-msg,
 .popup-select-msg,
-.popup-change-msg {
+.popup-change-msg,
+.popup-spisat-msg {
   text-align: center;
   margin-top: 1rem;
   height: 10px;
 }
 .popup-add-msg .gifload,
 .popup-select-msg .gifload,
-.popup-change-msg .gifload {
+.popup-change-msg .gifload,
+.popup-spisat-msg .gifload {
   margin: auto;
   width: 50px;
   height: 50px;
@@ -136,6 +140,5 @@ input {
   width: 25%;
 }
 img {
-  cursor: pointer;
   vertical-align: top;
 }
