--- a/less/main.less
+++ b/less/main.less
@@ -4,6 +4,7 @@ body {
   font-size: 13pt;
   margin: 0;
   padding: 0;
+  background: rgb(250, 247, 247);
 }
 
 a:hover {
@@ -153,4 +154,35 @@ input {
 
 img {
   vertical-align: top;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+table thead tr {
+  color: #ffffff;
+  font-weight: bold;
+  background: #00bf80;
+}
+table thead tr td {
+  border: 1px solid #01ab73;
+}
+table tbody tr td {
+  border: 1px solid #e8e9eb;
+}
+table tbody tr:nth-child(2n) {
+  background: #f4f4f4;
+}
+table tbody tr:hover {
+  background: #ebffe8;
+}
+table tbody td {
+  width: 10%;
+}
+.td-min {
+  width: 5%;
+}
+.td-max {
+  width: 15%;
 }
