--- a/less/main.less
+++ b/less/main.less
@@ -171,9 +171,11 @@ table thead tr td {
 table tbody tr td {
   border: 1px solid #e8e9eb;
 }
-table tbody tr:nth-child(2n) {
-  background: #f4f4f4;
+
+table tbody .red {
+  background: #eb59107a;
 }
+
 table tbody tr:hover {
   background: #ebffe8;
 }
@@ -185,4 +187,8 @@ table tbody td {
 }
 .td-max {
   width: 15%;
+}
+
+table tbody .eloy {
+  background: #aff0378c;
 }
